--- a/GhasreMobile/Views/Blog/Index.cshtml
+++ b/GhasreMobile/Views/Blog/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TblBlog>
 @{
-    ViewData["Title"] = "مقاله ها";
+    ViewData["Title"] = "اخبار ها";
     ViewData["Single"] = true;
     Layout = "~/Views/Shared/_Layout.cshtml";
 
