--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -112,6 +112,9 @@
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="افزودن رنگ">
                                             <a onclick="AddColor(@item.ProductId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="add-circle-outline"></a>
                                         </span>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="افزودن ویژگی">
+                                            <a href="/Admin/Product/AddProperty/@item.ProductId" class="text-primary" uk-icon="create-outline"></a>
+                                        </span>
                                     </td>
 
                                 </tr>
