--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -115,6 +115,9 @@
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="افزودن ویژگی">
                                             <a href="/Admin/Product/AddProperty/@item.ProductId" class="text-primary" uk-icon="create-outline"></a>
                                         </span>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="گالری ">
+                                            <a href="/Admin/Product/AddProperty/@item.ProductId" class="text-primary" uk-icon="create-outline"></a>
+                                        </span>
                                     </td>
 
                                 </tr>
