admin: add property and add gallery

--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -113,10 +113,10 @@
                                             <a onclick="AddColor(@item.ProductId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="add-circle-outline"></a>
                                         </span>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="افزودن ویژگی">
-                                            <a href="/Admin/Product/AddProperty/@item.ProductId" class="text-primary" uk-icon="create-outline"></a>
+                                            <a href="/Admin/Product/AddProperty/@item.ProductId" class="text-info" uk-icon="add-circle"></a>
                                         </span>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="گالری ">
-                                            <a href="/Admin/Product/AddProperty/@item.ProductId" class="text-primary" uk-icon="create-outline"></a>
+                                            <a href="/Admin/Product/AddGallery/@item.ProductId" class="text-primary" uk-icon="images"></a>
                                         </span>
                                     </td>
 
