--- a/GhasreMobile/Areas/Admin/Views/Product/AddProperty.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/AddProperty.cshtml
@@ -9,17 +9,19 @@
         <div class="card flex-div border-0 main-shadow">
 
             <div class="form-row mt-3">
-                <div class="form-group col-md-5">
-                    <label class="uk-text-bold">افزودن ویژگی</label>
+                <div class="form-group col-md-5 ">
+                    <label class="uk-text-bold mr-2">افزودن ویژگی</label>
+                    
                     <a onclick="CreateProperty()" data-toggle="modal" data-target="#modalSave" class="btn btn-info btn-sm text-white">افزودن</a>
-                    <a onclick="saveProperty()" class="btn btn-info btn-sm text-white">ذخیره</a>
+                    <a onclick="saveProperty()" class="btn btn-success btn-sm text-white">ذخیره</a>
                     <a href="/Admin/Product" class="btn btn-primary btn-sm text-white pull-right ml-4 LoadingDiv">انصراف</a>
 
                 </div>
                 <div class="form-group col-md-2 mt-md-4 pt-2">
                 </div>
             </div>
-            <form id="myFormProperty" action="AddProperty" method="post">
+            <hr class="uk-margin-remove"/>
+            <form id="myFormProperty" action="AddProperty" method="post" class="overflow-auto mb-3 mt-2">
                 <aside id="PropertyPanel">
                     @foreach (var item in Model.TblProductPropertyRel.OrderBy(i => i.ProductPropertyRelId))
                     {
@@ -30,7 +32,7 @@
                             <input id="PropertyValue" name="Value" class="form-control form-control-sm col-md-3 col-9" value="@item.Value">
                             @*<a onclick="DeleteProperty(@item.PropertyId,@item.ProductPropertyRelId)" class="text-danger col-2 mr-1" uk-icon="close-circle">
                                 </a>*@
-                            <a onclick="DeleteProperty(@item.PropertyId)" class="text-danger col-2 mr-1" uk-icon="close-circle">
+                            <a onclick="DeleteProperty(@item.PropertyId)" class="text-danger mr-1" uk-icon="close-circle">
                             </a>
                         </div>
                     }
