--- a/GhasreMobile/Areas/Admin/Views/Home/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Home/Index.cshtml
@@ -66,7 +66,7 @@
                 </div>
                 <div class="card-body user-content">
                     <div class="row">
-                        <a href="/Admin/Order" class="col-md-3">
+                        <a href="/Admin/Order/AllOrder" class="col-md-3">
                             <div class="user-box alert alert-primary p-3 rounded shadow">
                                 <span uk-icon="cart"></span>
                                 <div class="user-title mb-3 mt-3">
@@ -77,7 +77,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="/Admin/Order" class="col-md-3">
+                        <a href="/Admin/Order/AllOrder" class="col-md-3">
                             <div class="user-box alert alert-success px-3 p-3 rounded shadow">
                                 <span uk-icon="cash"></span>
                                 <div class="user-title mb-3 mt-3">
@@ -88,7 +88,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="/Admin/Order" class="col-md-3">
+                        <a href="/Admin/Order/AllOrder" class="col-md-3">
                             <div class="user-box alert alert-danger px-3 p-3 rounded shadow">
                                 <span uk-icon="trash-bin"></span>
                                 <div class="user-title mb-3 mt-3">
@@ -99,6 +99,7 @@
                                 </div>
                             </div>
                         </a>
+
                         <a href="/Admin/OnlineOrder" class="col-md-3">
                             <div class="user-box alert alert-warning px-3 p-3 rounded shadow">
                                 <span uk-icon="cart"></span>
