--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -158,11 +158,19 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li class="nav-item active">
+                                        <a href="/Admin/Order/AllOrder" class="LoadingDiv">
+                                            <span class="icon-holder">
+                                                <i uk-icon="desktop-outline"></i>
+                                            </span>
+                                            <span class="title">همه سفارشات </span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item active">
                                         <a href="/Admin/Order" class="LoadingDiv">
                                             <span class="icon-holder">
                                                 <i uk-icon="desktop-outline"></i>
                                             </span>
-                                            <span class="title">سفارشات سایت</span>
+                                            <span class="title">سفارشات پرداخت شده  </span>
                                         </a>
                                     </li>
                                     <li class="nav-item active">
@@ -176,7 +184,7 @@
                                     <li class="nav-item active">
                                         <a href="/Admin/Fractional" class="LoadingDiv">
                                             <span class="icon-holder">
-                                                <i uk-icon="flash-off"></i>                                                
+                                                <i uk-icon="flash-off"></i>
                                             </span>
                                             <span class="title">سفارشات اقساطی</span>
                                         </a>
