--- a/GhasreMobile/Areas/Admin/Views/Home/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="/Admin/Order/AllOrder" class="col-md-3">
+                        <a href="/Admin/Order" class="col-md-3">
                             <div class="user-box alert alert-success px-3 p-3 rounded shadow">
                                 <span uk-icon="cash"></span>
                                 <div class="user-title mb-3 mt-3">
@@ -88,17 +88,30 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="/Admin/Order/AllOrder" class="col-md-3">
-                            <div class="user-box alert alert-danger px-3 p-3 rounded shadow">
-                                <span uk-icon="trash-bin"></span>
+                        <a href="/Admin/Fractional" class="col-md-3">
+                            <div class="user-box alert alert-primary p-3 rounded shadow">
+                                <span class="icon-holder">
+                                    <i uk-icon="flash-off"></i>
+                                </span>
                                 <div class="user-title mb-3 mt-3">
-                                    <span class="icon-pic-primary">سفارشات لغو شده</span>
+                                    <span class="icon-pic-success">سفارشات اقساطی </span>
                                 </div>
                                 <div class="user-count">
-                                    <span class="icon-pic-primary font-weight-bold">@Model.OrderCancelCount</span>
+                                    <span class="icon-pic-primary font-weight-bold">@Model.AllOrderFractionalCount</span>
                                 </div>
                             </div>
                         </a>
+                        @*<a href="/Admin/Order/AllOrder" class="col-md-3">
+            <div class="user-box alert alert-danger px-3 p-3 rounded shadow">
+                <span uk-icon="trash-bin"></span>
+                <div class="user-title mb-3 mt-3">
+                    <span class="icon-pic-primary">سفارشات لغو شده</span>
+                </div>
+                <div class="user-count">
+                    <span class="icon-pic-primary font-weight-bold">@Model.OrderCancelCount</span>
+                </div>
+            </div>
+        </a>*@
 
                         <a href="/Admin/OnlineOrder" class="col-md-3">
                             <div class="user-box alert alert-warning px-3 p-3 rounded shadow">
