--- a/GhasreMobile/Areas/Admin/Views/Order/AllOrder.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Order/AllOrder.cshtml
@@ -54,74 +54,74 @@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                                <tr>
-                                    <td>@item.OrdeId</td>
-                                    <td>
-                                        @if (item.IsFractional == true)
-                                        {
-                                            <span class="text-info">خرید اقساطی</span>
-                                        }
-                                        else if (item.IsPayed)
-                                        {
-                                            <span class="text-success">خرید آنلاین(پرداخت شده)</span>
-                                        }
-                                        else if (item.IsPayed == false)
-                                        {
-                                            <span class="text-danger">پرداخت نشده</span>
-                                        }
-                                    </td>
-                                    <td>
-                                        @if ((item.IsPayed == true) || (item.IsPayed == false && item.IsFractional == true))
-                                        {
+                            <tr>
+                                <td>@item.OrdeId</td>
+                                <td>@item.DateSubmited.AllToShamsi()</td>
+                                <td>
+                                    @if (item.IsFractional == true)
+                                    {
+                                        <span class="text-info">خرید اقساطی</span>
+                                    }
+                                    else if (item.IsPayed)
+                                    {
+                                        <span class="text-success">خرید آنلاین(پرداخت شده)</span>
+                                    }
+                                    else if (item.IsPayed == false)
+                                    {
+                                        <span class="text-danger">پرداخت نشده</span>
+                                    }
+                                </td>
+                                <td>
+                                    @if ((item.IsPayed == true) || (item.IsPayed == false && item.IsFractional == true))
+                                    {
 
-                                            @if (item.Status == 0)
-                                            {
-                                                <span class="text-warning">در حال آماده سازی</span>
-                                            }
-                                            else if (item.Status == 1)
-                                            {
-                                                <span class="text-info">ارسال شده</span>
-                                            }
-                                            else if (item.Status == 2)
-                                            {
-                                                <span class="text-success">تکمیل شده</span>
-                                            }
-                                        }
-
-                                    </td>
-                                    <td>
-                                        @if ((item.IsPayed == true) || (item.IsPayed == false && item.IsFractional == true))
+                                        @if (item.Status == 0)
                                         {
-                                            <span data-placement="top" data-toggle="tooltip" data-original-title="جزئیات">
-                                                <a onclick="OrderInfo(@item.OrdeId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
+                                            <span class="text-warning">در حال آماده سازی</span>
+                                        }
+                                        else if (item.Status == 1)
+                                        {
+                                            <span class="text-info">ارسال شده</span>
+                                        }
+                                        else if (item.Status == 2)
+                                        {
+                                            <span class="text-success">تکمیل شده</span>
+                                        }
+                                    }
+
+                                </td>
+                                <td>
+                                    @if ((item.IsPayed == true) || (item.IsPayed == false && item.IsFractional == true))
+                                    {
+                                        <span data-placement="top" data-toggle="tooltip" data-original-title="جزئیات">
+                                            <a onclick="OrderInfo(@item.OrdeId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
+                                        </span>
+                                    }
+
+                                </td>
+                                <td>
+                                    @if ((item.IsPayed == true) || (item.IsPayed == false && item.IsFractional == true))
+                                    {
+
+                                        @if (item.Status == 0)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ارسال سفارش">
+                                                <a onclick="SendOrder(@item.OrdeId)" class="text-info" uk-icon="send-outline"></a>
                                             </span>
                                         }
-
-                                    </td>
-                                    <td>
-                                        @if ((item.IsPayed == true) || (item.IsPayed == false && item.IsFractional == true))
+                                        else if (item.Status == 1)
                                         {
-
-                                            @if (item.Status == 0)
-                                            {
-                                                <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ارسال سفارش">
-                                                    <a onclick="SendOrder(@item.OrdeId)" class="text-info" uk-icon="send-outline"></a>
-                                                </span>
-                                            }
-                                            else if (item.Status == 1)
-                                            {
-                                                <span data-placement="top" data-toggle="tooltip" title="" data-original-title="تکمیل سفارش">
-                                                    <a onclick="DoneOrder(@item.OrdeId)" class="text-success" uk-icon="checkmark-done-outline"></a>
-                                                </span>
-                                            }
-                                            else if (item.Status == 2)
-                                            {
-                                                <span class="text-success">تکمیل شده</span>
-                                            }
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="تکمیل سفارش">
+                                                <a onclick="DoneOrder(@item.OrdeId)" class="text-success" uk-icon="checkmark-done-outline"></a>
+                                            </span>
                                         }
-                                    </td>
-                                    <td></td>
-                                </tr>
+                                        else if (item.Status == 2)
+                                        {
+                                            <span class="text-success">تکمیل شده</span>
+                                        }
+                                    }
+                                </td>
+                            </tr>
                             }
                         </tbody>
                     </table>
