--- a/GhasreMobile/Views/Shared/Components/ProductView/ProductView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/ProductView/ProductView.cshtml
@@ -14,7 +14,8 @@
                 </div>
 
                 <ul class="uk-slider-items">
-                    @foreach (var j in item.TblProduct.Where(i => i.IsDeleted == false && i.TblColor.Sum(i => i.Count) > 0))
+                    @*@foreach (var j in item.TblProduct.Where(i => i.IsDeleted == false && i.TblColor.Sum(i => i.Count) > 0))*@
+                    @foreach (var j in item.TblProduct.Where(i => i.IsDeleted == false))
                     {
                         <li>
                             <partial name="_ProductBlock" model="j" />
