--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -241,7 +241,10 @@ backdrop-filter: saturate(80%);
 
 @media only screen and (max-width: 724px) {
   .main-contact {
-    grid-template-columns: 1fr; } }
+    display: flex;
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column; } }
 
 .gallery-main {
   display: grid;
