--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -66,14 +66,14 @@
                                     </span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li class="nav-item active">
+                                    @*<li class="nav-item active">
                                         <a href="/Admin/Card" class="LoadingDiv">
                                             <span class="icon-holder">
                                                 <i uk-icon="card"></i>
                                             </span>
                                             <span class="title">کارت بانکی</span>
                                         </a>
-                                    </li>
+                                    </li>*@
                                     <li class="nav-item active">
                                         <a href="/Admin/Config" class="LoadingDiv">
                                             <span class="icon-holder">
