--- a/GhasreMobile/Areas/Admin/Views/Fractional/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Fractional/Index.cshtml
@@ -28,7 +28,12 @@
                                 <div class="form-group mx-sm-1 mb-2">
                                     <input readonly id="endDate" class="form-control uk-text-small" type="text" placeholder="تا تاریخ  " value="">
                                 </div>
-
+                                <div class="form-group mx-sm-1 mb-2">
+                                    <input type="radio" name="orderValue" style="margin:0 10px 0 0" value="-1" /> <span class="text-danger">لغو شده اقساطی</span>
+                                    <input type="radio" name="orderValue" style="margin:0 10px 0 0" value="0" /> <span class="text-warning">در حال آماده سازی</span>
+                                    <input type="radio" name="orderValue" style="margin:0 10px 0 0" value="1" /> <span class="text-info">ارسال شده</span>
+                                    <input type="radio" name="orderValue" style="margin:0 10px 0 0" value="2" /> <span class="text-success">تکمیل شده</span>
+                                </div>
                             </div>
                         </div>
                         <div class="form-toolbar mr-3">
@@ -58,7 +63,7 @@
                                     <td>@item.DateSubmited.AllToShamsi()</td>
                                     <td>
 
-                                        @if (item.IsPayed == false && item.IsFractional == true)
+                                        @if (item.IsPayed == false && item.IsFractional == true && item.Status != -1)
                                         {
 
                                             @if (item.Status == 0)
@@ -74,6 +79,10 @@
                                                 <span class="text-success">تکمیل شده</span>
                                             }
                                         }
+                                        else if (item.Status == -1 && item.IsPayed == false && item.IsFractional == true)
+                                        {
+                                            <span class="text-danger"> سفارش توسط شما لغو شده است</span>
+                                        }
                                     </td>
                                     <td>
                                         @if (item.IsPayed == false && item.IsFractional == true)
@@ -84,7 +93,7 @@
                                         }
                                     </td>
                                     <td>
-                                        @if (item.IsPayed == false && item.IsFractional == true)
+                                        @if (item.IsPayed == false && item.IsFractional == true && item.Status != -1)
                                         {
 
                                             @if (item.Status == 0)
@@ -106,41 +115,21 @@
 
                                             <span data-placement="top" data-toggle="tooltip" data-original-title="کد مرسوله محصول">
                                                 <a onclick="SabteCodeMarsole(@item.OrdeId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="cube"></a>
-
+                                            </span>
+                                            @if (item.IsFractional == true)
+                                            {
+                                                <span data-placement="top" data-toggle="tooltip" title="" data-original-title="لغو سفارش">
+                                                    <a onclick="deleteFractional(@item.OrdeId)" class="text-danger" uk-icon="close-circle-sharp"></a>
+                                                </span>
+                                            }
+                                        }
+                                        else if (item.Status == -1 && item.IsPayed == false && item.IsFractional == true)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="برگرداندن به حالت اقساطی">
+                                                <a onclick="redreshFractional(@item.OrdeId)" class="text-success" uk-icon="refresh-circle-sharp"></a>
                                             </span>
                                         }
-                                        @*@if (!item.IsFractional.Value)
-                                            {
-                                                <span data-placement="top" data-toggle="tooltip" title="" data-original-title="تایید سفارش">
-                                                    <a onclick="StatusOrder(@item.OrdeId)" class="text-info" uk-icon="cash-outline"></a>
-                                                </span>
-                                            }
 
-                                            @if (item.Status == 0)
-                                            {
-                                                <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ارسال سفارش">
-                                                    <a onclick="SendOrder(@item.OrdeId)" class="text-info" uk-icon="send-outline"></a>
-                                                </span>
-                                            }
-                                            @if (item.Status == 1)
-                                            {
-                                                <span data-placement="top" data-toggle="tooltip" title="" data-original-title="تکمیل سفارش">
-                                                    <a onclick="DoneOrder(@item.OrdeId)" class="text-success" uk-icon="checkmark-done-outline"></a>
-                                                </span>
-                                                <span data-placement="top" data-toggle="tooltip" title="" data-original-title="برگشت برای ارسال">
-                                                    <a onclick="ChangeSendOrderStatus(@item.OrdeId)" class="text-success" uk-icon="close-circle-outline"></a>
-                                                </span>
-                                            }
-                                            @if (!item.IsPayed)
-                                            {
-                                                <span data-placement="top" data-toggle="tooltip" title="" data-original-title="پرداخت پیش قسط">
-                                                    <a onclick="PayedOrder(@item.OrdeId)" class="text-info" uk-icon="cash-outline"></a>
-                                                </span>
-                                            }
-                                            @if (item.Status == 2)
-                                            {
-                                                <span class="text-success">تکمیل شده</span>
-                                            }*@
                                     </td>
                                 </tr>
                             }
@@ -157,6 +146,8 @@
         </div>
     </div>
 </div>
+<input type="hidden" id="statusSelected" />
+
 
 @section Script{
     <script src="~/datePersion/prism.js"></script>
@@ -169,6 +160,22 @@
         });
     </script>
     <script>
+        $("input[type=radio]").change(function () {
+            $('#statusSelected').val($(this).val());;
+        });
+        function deleteFractional(id) {
+            $("#overlay").fadeIn(300);
+            $.get("/Admin/Order/DeleteFractional/" + id, function () {
+                window.location.reload();
+            });
+        }
+        function redreshFractional(id) {
+            $("#overlay").fadeIn(300);
+            $.get("/Admin/Order/RedreshFractional/" + id, function () {
+                window.location.reload();
+            });
+        }
+
         function SabteCodeMarsole(id) {
             $(".modal-content").html("");
             $.get("/Admin/Order/CodeMarsole/" + id, function (result) {
@@ -197,11 +204,13 @@
         }
 
         function BtnSearch() {
+            $("#overlay").fadeIn(300);
             var OrderId = $("#SearchInputId").val();
             var TellNo = $("#SearchInputUserPhone").val();
             var StartDate = $("#startDate").val();
             var EndDate = $("#endDate").val();
-            window.location.href = "/Admin/Fractional?OrderId=" + OrderId + "&TellNo=" + TellNo + "&StartDate=" + StartDate + "&EndDate=" + EndDate;
+            var StatusSelected = $("#statusSelected").val();
+            window.location.href = "/Admin/Fractional?OrderId=" + OrderId + "&TellNo=" + TellNo + "&StartDate=" + StartDate + "&EndDate=" + EndDate + "&StatusSelected=" + StatusSelected;
         }
         function ChangeSendOrderStatus(id) {
             $.post("/Admin/Order/ChangeSendOrderStatus/" + id, function () {
