--- a/GhasreMobile/Areas/Admin/Views/Order/AllOrder.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Order/AllOrder.cshtml
@@ -28,7 +28,12 @@
                                 <div class="form-group mx-sm-1 mb-2">
                                     <input readonly id="endDate" class="form-control uk-text-small" type="text" placeholder="تا تاریخ  " value="">
                                 </div>
-
+                                <div class="form-group mx-sm-1 mb-2">
+                                    <input type="radio" name="orderValue" style="margin:0 10px 0 0" value="-1" /> <span class="text-danger">لغو شده اقساطی</span>
+                                    <input type="radio" name="orderValue" style="margin:0 10px 0 0" value="0" /> <span class="text-warning">در حال آماده سازی</span>
+                                    <input type="radio" name="orderValue" style="margin:0 10px 0 0" value="1" /> <span class="text-info">ارسال شده</span>
+                                    <input type="radio" name="orderValue" style="margin:0 10px 0 0" value="2" /> <span class="text-success">تکمیل شده</span>
+                                </div>
                             </div>
                         </div>
                         <div class="form-toolbar mr-3">
@@ -72,7 +77,7 @@
                                         }
                                     </td>
                                     <td>
-                                        @if ((item.IsPayed == true) || (item.IsPayed == false && item.IsFractional == true))
+                                        @if (((item.IsPayed == true) || (item.IsPayed == false && item.IsFractional == true)) && item.Status != -1)
                                         {
 
                                             @if (item.Status == 0)
@@ -88,6 +93,10 @@
                                                 <span class="text-success">تکمیل شده</span>
                                             }
                                         }
+                                        else if (item.Status == -1)
+                                        {
+                                            <span class="text-danger"> سفارش توسط شما لغو شده است</span>
+                                        }
 
                                     </td>
                                     <td>
@@ -99,7 +108,7 @@
                                         }
                                     </td>
                                     <td>
-                                        @if ((item.IsPayed == true) || (item.IsPayed == false && item.IsFractional == true))
+                                        @if (((item.IsPayed == true) || (item.IsPayed == false && item.IsFractional == true)) && item.Status != -1)
                                         {
 
                                             @if (item.Status == 0)
@@ -122,6 +131,19 @@
                                             <span data-placement="top" data-toggle="tooltip" data-original-title="کد مرسوله محصول">
                                                 <a onclick="SabteCodeMarsole(@item.OrdeId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="cube"></a>
 
+                                            </span>
+                                            @if (item.IsFractional == true)
+                                            {
+                                                <span data-placement="top" data-toggle="tooltip" title="" data-original-title="لغو سفارش">
+                                                    <a onclick="deleteFractional(@item.OrdeId)" class="text-danger" uk-icon="close-circle-sharp"></a>
+                                                </span>
+                                            }
+
+                                        }
+                                        else if (item.Status == -1 && item.IsPayed == false && item.IsFractional == true)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="برگرداندن به حالت اقساطی">
+                                                <a onclick="redreshFractional(@item.OrdeId)" class="text-success" uk-icon="refresh-circle-sharp"></a>
                                             </span>
                                         }
                                     </td>
@@ -146,7 +168,7 @@
                             else
                             {
                                 <li class="page-item">
-                                    <a class="page-link" href="/Admin/Order/AllOrder?pageId=@(ViewBag.PageId-1)&InPageCount=@ViewBag.InPageCount&OrderId=@ViewBag.OrderId&TellNo=@ViewBag.TellNo&StartDate=@ViewBag.StartDate&EndDate=@ViewBag.EndDate">قبلی</a>
+                                    <a class="page-link" href="/Admin/Order/AllOrder?pageId=@(ViewBag.PageId-1)&InPageCount=@ViewBag.InPageCount&OrderId=@ViewBag.OrderId&TellNo=@ViewBag.TellNo&StartDate=@ViewBag.StartDate&EndDate=@ViewBag.EndDate&StatusSelected=@ViewBag.StatusSelected">قبلی</a>
                                 </li>
 
                             }
@@ -179,7 +201,7 @@
 
                             {
                                 <li class="page-item">
-                                    <a class="page-link" href="/Admin/Order/AllOrder?pageId=@(ViewBag.PageId+1)&InPageCount=@ViewBag.InPageCount&OrderId=@ViewBag.OrderId&TellNo=@ViewBag.TellNo&StartDate=@ViewBag.StartDate&EndDate=@ViewBag.EndDate">بعدی</a>
+                                    <a class="page-link" href="/Admin/Order/AllOrder?pageId=@(ViewBag.PageId+1)&InPageCount=@ViewBag.InPageCount&OrderId=@ViewBag.OrderId&TellNo=@ViewBag.TellNo&StartDate=@ViewBag.StartDate&EndDate=@ViewBag.EndDate&StatusSelected=@ViewBag.StatusSelected">بعدی</a>
                                 </li>
 
                             }
@@ -229,6 +251,7 @@
     </div>
 </div>
 
+<input type="hidden" id="statusSelected" />
 @section Script{
     <script src="~/datePersion/prism.js"></script>
     <script src="~/datePersion/persianDatepicker.js"></script>
@@ -241,7 +264,22 @@
     </script>
 
     <script>
-
+        $("input[type=radio]").change(function () {
+            $('#statusSelected').val($(this).val());;
+        });
+        function deleteFractional(id) {
+            $("#overlay").fadeIn(300);
+            $.get("/Admin/Order/DeleteFractional/" + id, function () {
+                window.location.reload();
+            });
+        }
+        function redreshFractional(id) {
+            $("#overlay").fadeIn(300);
+            $.get("/Admin/Order/RedreshFractional/" + id, function () {
+                window.location.reload();
+            });
+        }
+      
         function SabteCodeMarsole(id) {
             $(".modal-content").html("");
             $.get("/Admin/Order/CodeMarsole/" + id, function (result) {
@@ -280,7 +318,8 @@
             var EndDate = $("#endDate").val();
             var pageId = $("#pageNumber option:selected").val();
             var InPageCount = $("#InPageCount option:selected").val();
-            window.location.href = "/Admin/Order/AllOrder?pageId=" + pageId + "&InPageCount=" + InPageCount + "&OrderId=" + OrderId + "&TellNo=" + TellNo + "&StartDate=" + StartDate + "&EndDate=" + EndDate;
+            var StatusSelected = $("#statusSelected").val();
+            window.location.href = "/Admin/Order/AllOrder?pageId=" + pageId + "&InPageCount=" + InPageCount + "&OrderId=" + OrderId + "&TellNo=" + TellNo + "&StartDate=" + StartDate + "&EndDate=" + EndDate + "&StatusSelected=" + StatusSelected;
         }
 
 
@@ -292,8 +331,8 @@
             var TellNo = $("#SearchInputUserPhone").val();
             var StartDate = $("#startDate").val();
             var EndDate = $("#endDate").val();
-
-            window.location.href = "/Admin/Order/AllOrder?pageId=" + pageId + "&InPageCount=" + InPageCount + "&OrderId=" + OrderId + "&TellNo=" + TellNo + "&StartDate=" + StartDate + "&EndDate=" + EndDate;
+            var StatusSelected = $("#statusSelected").val();
+            window.location.href = "/Admin/Order/AllOrder?pageId=" + pageId + "&InPageCount=" + InPageCount + "&OrderId=" + OrderId + "&TellNo=" + TellNo + "&StartDate=" + StartDate + "&EndDate=" + EndDate + "&StatusSelected=" + StatusSelected;
 
         });
 
@@ -306,8 +345,8 @@
             var TellNo = $("#SearchInputUserPhone").val();
             var StartDate = $("#startDate").val();
             var EndDate = $("#endDate").val();
-
-            window.location.href = "/Admin/Order/AllOrder?pageId=" + pageId + "&InPageCount=" + InPageCount + "&OrderId=" + OrderId + "&TellNo=" + TellNo + "&StartDate=" + StartDate + "&EndDate=" + EndDate;
+            var StatusSelected = $("#statusSelected").val();
+            window.location.href = "/Admin/Order/AllOrder?pageId=" + pageId + "&InPageCount=" + InPageCount + "&OrderId=" + OrderId + "&TellNo=" + TellNo + "&StartDate=" + StartDate + "&EndDate=" + EndDate + "&StatusSelected=" + StatusSelected;
 
         });
 
