--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -325,6 +325,7 @@
         }
 
         function Selling(id) {
+            $("#overlay").fadeIn(300);
             $.post("/Admin/Product/Selling/" + id, function () {
                 window.location.reload();
             });
