--- a/GhasreMobile/Areas/Admin/Views/Product/AddGallery.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/AddGallery.cshtml
@@ -20,8 +20,8 @@
             <hr class="uk-margin-remove" />
             <div class="overflow-auto mr-2 mb-2">
                 <label class="mt-3 uk-text-bold">افزودن عکس به گالری تصاویر</label>
-                &nbsp;<span onclick="SetNewInputGallery()" class="text-success" uk-icon="add-circle-outline"></span>
-                &nbsp;<span onclick="RemoveInputGallery()" class="text-danger" uk-icon="remove-circle-outline"></span>
+                &nbsp;<span onclick="SetNewInputGallery()" class="text-success cursor-pointer" uk-icon="add-circle-outline"></span>
+                &nbsp;<span onclick="RemoveInputGallery()" class="text-danger cursor-pointer" uk-icon="remove-circle-outline"></span>
                 <br />
                 <span class="text-success mb-2">لطفا اندازه تصویر انتخابی 420*368 باشد</span>
                 <br />
@@ -36,11 +36,13 @@
 
                                     <div style="margin:70px;height:150px;" class="custom-file col-10 col-md-7 mt-3">
                                         <img src="~/Images/ProductAlbum/@item.Image.Image" style="max-height: 150px !important;display:block; margin: 0 auto" alt="Alternate Text" />
+                                        <span  id="RemoveGallery-@item.ImageId" onclick="RemoveImageGallery(@item.ImageId)" class="text-danger cursor-pointer mr-md-2 mr-1" uk-icon="remove-circle-outline" title="" data-placement="top" data-toggle="tooltip" data-original-title="حذف کامل تصویر "></span>
                                     </div>
+
                                     <div class="custom-file col-10 col-md-7 mt-3">
-                                        <input type="file" value="@item.Image" class="custom-file-input form-control form-control-sm">
-                                        <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">@item.Image.Image</label>
-                                    </div><span id="RemoveGallery-@item.ImageId" onclick="RemoveImageGallery(@item.ImageId)" class="text-danger cursor-pointer mr-md-2 mr-1" uk-icon="remove-circle-outline" title="" data-placement="top" data-toggle="tooltip" data-original-title="حذف کامل تصویر "></span>
+                                        @*<input type="file" value="@item.Image" class="custom-file-input form-control form-control-sm">*@
+                                        @*<label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">@item.Image.Image</label>*@
+                                    </div>
                                 </div>
                             }
 
@@ -146,15 +148,15 @@
     <script src="~/js/Auto_Formatting_Currency.js"></script>
     <script>
 
-                                //function DeleteProperty(id, mainId) {
-                                //    $("#PropertyInCreate-" + id).remove();
-                                //    //$("#overlay").fadeIn(300);
-                                //    //var isDeleted = Bjax('/Admin/Product/DeleteProperty?id=', mainId, 'SP');
-                                //    //if (isDeleted) {
-                                //    //    $("#PropertyInCreate-" + id).remove();
-                                //    //    $("#overlay").fadeOut(300);
-                                //    //}
-                                //}
+                                        //function DeleteProperty(id, mainId) {
+                                        //    $("#PropertyInCreate-" + id).remove();
+                                        //    //$("#overlay").fadeIn(300);
+                                        //    //var isDeleted = Bjax('/Admin/Product/DeleteProperty?id=', mainId, 'SP');
+                                        //    //if (isDeleted) {
+                                        //    //    $("#PropertyInCreate-" + id).remove();
+                                        //    //    $("#overlay").fadeOut(300);
+                                        //    //}
+                                        //}
     </script>
 
 }
