--- a/GhasreMobile/Views/Home/Index.cshtml
+++ b/GhasreMobile/Views/Home/Index.cshtml
@@ -81,7 +81,7 @@
 <!-- #DeliveryView -->
 <div role="none" id="Ad3"></div>
 
-@await Component.InvokeAsync("ProductView", new { id = 1 })
+@*@await Component.InvokeAsync("ProductView", new { id = 1 })*@
 <!-- #questions -->
 @await Component.InvokeAsync("QuestionsView")
 <!-- #questions -->
